--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,31 @@
 {
 	"files.exclude": {
-		"**/.git": true,
-		"**/.svn": true,
-		"**/.hg": true,
-		"**/CVS": true,
-		"**/.DS_Store": true,
-		"**/Thumbs.db": true
-	},
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/CVS": true
+  },
 	"hide-files.files": [],
 	"workbench.colorCustomizations": {
-		"activityBar.activeBackground": "#5f022e",
-		"activityBar.background": "#5f022e",
-		"activityBar.foreground": "#e7e7e7",
-		"activityBar.inactiveForeground": "#e7e7e799",
-		"activityBarBadge.background": "#3c7d03",
-		"activityBarBadge.foreground": "#e7e7e7",
-		"commandCenter.border": "#e7e7e799",
-		"sash.hoverBorder": "#5f022e",
-		"statusBar.background": "#2d0116",
-		"statusBar.foreground": "#e7e7e7",
-		"statusBarItem.hoverBackground": "#5f022e",
-		"statusBarItem.remoteBackground": "#2d0116",
-		"statusBarItem.remoteForeground": "#e7e7e7",
-		"titleBar.activeBackground": "#2d0116",
-		"titleBar.activeForeground": "#e7e7e7",
-		"titleBar.inactiveBackground": "#2d011699",
-		"titleBar.inactiveForeground": "#e7e7e799"
-	},
+    "activityBar.activeBackground": "#5f022e",
+    "activityBar.background": "#5f022e",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#3c7d03",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#5f022e",
+    "statusBar.background": "#2d0116",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#5f022e",
+    "statusBarItem.remoteBackground": "#2d0116",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#2d0116",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#2d011699",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
 	"peacock.color": "#2d0116"
 }
